--- a/containers/docker-compose.yml
+++ b/containers/docker-compose.yml
@@ -34,7 +34,7 @@ services:
       MONGO_INITDB_DATABASE: datalake
 
   minio-service:
-    container_name: lakehouse_s3
+    container_name: datalake
     image: minio/minio:RELEASE.2018-11-15T01-26-07Z
     ports:
       - "9000:9000"
